--- a/MyPartyCore/wwwroot/css/paper-kit-2-pro.css
+++ b/MyPartyCore/wwwroot/css/paper-kit-2-pro.css
@@ -8326,7 +8326,7 @@ textarea.form-control {
     }
 
     .media-post .author {
-        width: 15%;
+        /* width: 15%;*/
     }
 
     .media-post .media-body {
