--- a/MyPartyCore/Views/Party/Add.cshtml
+++ b/MyPartyCore/Views/Party/Add.cshtml
@@ -1,60 +1,64 @@
 ﻿@model MyPartyCore.ViewModels.CreatePartyViewModel
 
 
-<h4>@Localizer["Title"]</h4>
-<hr />
-<div class="row">
-    <div>
-        <form asp-action="Add" method="post">
-            <div class="form-group">
-                <input type="hidden" asp-for="OwnerId" />
+    <div class="section landing-section">
+        <div class="row" style="height: 100%;">
+            <div class="col-md-10 ml-auto mr-auto">
+                <h4>@Localizer["Title"]</h4>
+                <hr />
+
+                <div>
+                    <form asp-action="Add" method="post">
+                        <div class="form-group">
+                            <input type="hidden" asp-for="OwnerId" />
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="Title" class="control-label"></label>
+                            <input asp-for="Title" class="form-control" />
+                            <span asp-validation-for="Title" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="Date" class="label-control"></label>
+                            <input asp-for="Date" type="text" class="form-control datetimepicker" />
+                            <span asp-validation-for="Date" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="Location" class="control-label"></label>
+                            <input asp-for="Location" class="form-control" />
+                            <span asp-validation-for="Location" class="text-danger"></span>
+                        </div>
+                        <div class="custom-control custom-switch form-group">
+                            <input asp-for="AgeLimit" class="custom-control-input" />
+                            <label asp-for="AgeLimit" class="custom-control-label"></label>
+                        </div>
+                        <div asp-validation-summary="All" class="text-danger"></div>
+                        <div class="form-group">
+                            <input type="submit" value=@Localizer["Create"] class="btn btn-outline-primary" />
+                        </div>
+                    </form>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Title" class="control-label"></label>
-                <input asp-for="Title" class="form-control" />
-                <span asp-validation-for="Title" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Date" class="label-control"></label>
-                <input asp-for="Date" type="text" class="form-control datetimepicker" />
-                <span asp-validation-for="Date" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Location" class="control-label"></label>
-                <input asp-for="Location" class="form-control" />
-                <span asp-validation-for="Location" class="text-danger"></span>
-            </div>
-            <div class="custom-control custom-switch form-group">
-                <input asp-for="AgeLimit" class="custom-control-input" />
-                <label asp-for="AgeLimit" class="custom-control-label"></label>
-            </div>
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <input type="submit" value=@Localizer["Create"] class="btn btn-outline-primary" />
-            </div>
-        </form>
+        </div>
     </div>
-</div>
+                @section Scripts {
 
-@section Scripts {
+                    <partial name="_ValidationScriptsPartial" />
 
-    <partial name="_ValidationScriptsPartial" />
+                    <!--javascript for init-->
+                    <script>
+                        $('.datetimepicker').datetimepicker({
+                            icons: {
+                                time: "fa fa-clock-o",
+                                date: "fa fa-calendar",
+                                up: "fa fa-chevron-up",
+                                down: "fa fa-chevron-down",
+                                previous: 'fa fa-chevron-left',
+                                next: 'fa fa-chevron-right',
+                                today: 'fa fa-screenshot',
+                                clear: 'fa fa-trash',
+                                close: 'fa fa-remove'
+                            }
+                        });
 
-    <!--javascript for init-->
-    <script>
-        $('.datetimepicker').datetimepicker({
-            icons: {
-                time: "fa fa-clock-o",
-                date: "fa fa-calendar",
-                up: "fa fa-chevron-up",
-                down: "fa fa-chevron-down",
-                previous: 'fa fa-chevron-left',
-                next: 'fa fa-chevron-right',
-                today: 'fa fa-screenshot',
-                clear: 'fa fa-trash',
-                close: 'fa fa-remove'
-            }
-        });
-
-    </script>
-}
+                    </script>
+                }
