--- a/MyPartyCore/Views/Roles/Edit.cshtml
+++ b/MyPartyCore/Views/Roles/Edit.cshtml
@@ -1,16 +1,26 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @model MyPartyCore.ViewModels.ChangeRoleViewModel
 
-<h2>@Localizer["Title"] @Model.UserName</h2>
 
-<form asp-action="Edit" method="post">
-    <input type="hidden" name="userId" value="@Model.UserId" />
-    <div class="form-group">
-        @foreach (IdentityRole role in Model.AllRoles)
-        {
-            <input type="checkbox" name="roles" value="@role.Name"
-                   @(Model.UserRoles.Contains(role.Name) ? "checked=\"checked\"" : "") />@role.Name <br />
-            }
+<div class="section landing-section">
+    <div class="row" style="height: 100%;">
+        <div class="col-md-10 ml-auto mr-auto">
+            <h2>@Localizer["Title"] @Model.UserName</h2>
+
+            <form asp-action="Edit" method="post">
+                <input type="hidden" name="userId" value="@Model.UserId" />
+                <div class="form-group">
+                    @foreach (IdentityRole role in Model.AllRoles)
+                    {
+                        <div class="custom-control custom-switch form-group">
+                            <input class="custom-control-input" type="checkbox" data-val="true" value="@role.Name" id=@(role.Name) name="roles" @(Model.UserRoles.Contains(role.Name) ? "checked=\"checked\"" : "")>
+                            <label class="custom-control-label" for=@(role.Name)>@role.Name</label>
+                        </div>
+                    }
+                </div>
+                <button type="submit" class="btn btn-primary">@Localizer["Save"]</button>
+            </form>
+        </div>
     </div>
-    <button type="submit" class="btn btn-primary">@Localizer["Save"]</button>
-</form>
+</div>
+
