--- a/MyPartyCore/Views/Shared/_Layout.cshtml
+++ b/MyPartyCore/Views/Shared/_Layout.cshtml
@@ -56,7 +56,7 @@
                     @RenderBody()
 
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 section">
                     @RenderSection("ListParties", required: false)
                 </div>
             </div>
