--- a/MyPartyCore/Views/Users/Create.cshtml
+++ b/MyPartyCore/Views/Users/Create.cshtml
@@ -2,34 +2,70 @@
 @{
     ViewBag.Title = @Localizer["Title"];
 }
-    <form asp-action="Create" asp-controller="Users">
-        <div class="form-group">
-            <label asp-for="UserName" class="control-label"></label>
-            <input asp-for="UserName" class="form-control" />
-            <span asp-validation-for="UserName" class="text-danger"></span>
+
+<div class="section landing-section">
+    <div class="row" style="height: 100%;">
+        <div class="col-md-10 ml-auto mr-auto">
+
+            <div class="text-center">
+                <h2>@Localizer["Title"]</h2>
+            </div>
+
+            <form asp-action="Create" asp-controller="Users">
+                <div class="form-group">
+                    <label asp-for="UserName" class="control-label"></label>
+                    <input asp-for="UserName" class="form-control" />
+                    <span asp-validation-for="UserName" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Email" class="control-label"></label>
+                    <input type="text" asp-for="Email" class="form-control" />
+                    <span asp-validation-for="UserName" class="text-danger"></span>
+                </div>
+                <div class="form-group date">
+                    <label asp-for="Birthday" class="label-control"></label>
+                    <input asp-for="Birthday" type="text" class="form-control datetimepicker" />
+                    <span asp-validation-for="Birthday" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Sex"></label>
+                    <select asp-for="Sex" asp-items="Html.GetEnumSelectList<GenderList>()"></select>
+                    <span asp-validation-for="Sex" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Password" class="control-label"></label>
+                    <input type="text" asp-for="Password" class="form-control" />
+                    <span asp-validation-for="Password" class="text-danger"></span>
+                </div>
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <input type="submit" value=@Localizer["Add"] class="btn btn-default" />
+                </div>
+            </form>
         </div>
-        <div class="form-group">
-            <label asp-for="Email" class="control-label"></label>
-            <input type="text" asp-for="Email" class="form-control" />
-            <span asp-validation-for="UserName" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="Birthday" class="control-label"></label>
-            <input asp-for="Birthday" class="form-control" />
-            <span asp-validation-for="Birthday" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="Sex"></label>
-            <select asp-for="Sex" asp-items="Html.GetEnumSelectList<GenderList>()"></select>
-            <span asp-validation-for="Sex" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="Password" class="control-label"></label>
-            <input type="text" asp-for="Password" class="form-control" />
-            <span asp-validation-for="Password" class="text-danger"></span>
-        </div>
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-        <div class="form-group">
-            <input type="submit" value=@Localizer["Add"] class="btn btn-default" />
-        </div>
-    </form>
+    </div>
+</div>
+
+@section Scripts {
+
+    <partial name="_ValidationScriptsPartial" />
+
+    <!--javascript for init-->
+    <script>
+                    $('.datetimepicker').datetimepicker({
+                        icons: {
+                            time: "fa fa-clock-o",
+                            date: "fa fa-calendar",
+                            up: "fa fa-chevron-up",
+                            down: "fa fa-chevron-down",
+                            previous: 'fa fa-chevron-left',
+                            next: 'fa fa-chevron-right',
+                            today: 'fa fa-screenshot',
+                            clear: 'fa fa-trash',
+                            close: 'fa fa-remove'
+                        },
+                        format: 'L'
+                    });
+
+    </script>
+}
