--- a/MyPartyCore/Views/Users/Edit.cshtml
+++ b/MyPartyCore/Views/Users/Edit.cshtml
@@ -2,63 +2,70 @@
 @{
     ViewBag.Title = @Localizer["Title"];
 }
-<div class="text-center">
-    <h2>@Localizer["Title"]</h2>
-</div>
 
-<form asp-action="Edit" asp-controller="Users">
-    <div class="form-group">
-        <input type="hidden" asp-for="Id" />
-    </div>
-    <div class="form-group">
-        <label asp-for="UserName" class="control-label"></label>
-        <input asp-for="UserName" class="form-control" />
-        <span asp-validation-for="UserName" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="Email" class="control-label">Email</label>
-        <input type="text" asp-for="Email" class="form-control" />
-        <span asp-validation-for="UserName" class="text-danger"></span>
-    </div>
-    <div class="form-group date">
-        <label asp-for="Birthday" class="label-control"></label>
-        <input asp-for="Birthday" type="text" class="form-control datetimepicker" />
-        <span asp-validation-for="Birthday" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="Sex"></label>
-        <select asp-for="Sex" asp-items="Html.GetEnumSelectList<GenderList>()"></select>
-        <span asp-validation-for="Sex" class="text-danger"></span>
-    </div>
-    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-    <div class="form-group">
-        <div class="text-center">
-            <input type="submit" value=@Localizer["Save"] class="btn btn-default" />
+    <div class="section landing-section">
+        <div class="row" style="height: 100%;">
+            <div class="col-md-10 ml-auto mr-auto">
+
+                <div class="text-center">
+                    <h2>@Localizer["Title"]</h2>
+                </div>
+
+                <form asp-action="Edit" asp-controller="Users">
+                    <div class="form-group">
+                        <input type="hidden" asp-for="Id" />
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="UserName" class="control-label"></label>
+                        <input asp-for="UserName" class="form-control" />
+                        <span asp-validation-for="UserName" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Email" class="control-label">Email</label>
+                        <input type="text" asp-for="Email" class="form-control" />
+                        <span asp-validation-for="UserName" class="text-danger"></span>
+                    </div>
+                    <div class="form-group date">
+                        <label asp-for="Birthday" class="label-control"></label>
+                        <input asp-for="Birthday" type="text" class="form-control datetimepicker" />
+                        <span asp-validation-for="Birthday" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Sex"></label>
+                        <select asp-for="Sex" asp-items="Html.GetEnumSelectList<GenderList>()"></select>
+                        <span asp-validation-for="Sex" class="text-danger"></span>
+                    </div>
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="form-group">
+                        <div class="text-center">
+                            <input type="submit" value=@Localizer["Save"] class="btn btn-default" />
+                        </div>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
-</form>
 
+            @section Scripts {
 
-@section Scripts {
+                <partial name="_ValidationScriptsPartial" />
 
-    <partial name="_ValidationScriptsPartial" />
+                <!--javascript for init-->
+                <script>
+                    $('.datetimepicker').datetimepicker({
+                        icons: {
+                            time: "fa fa-clock-o",
+                            date: "fa fa-calendar",
+                            up: "fa fa-chevron-up",
+                            down: "fa fa-chevron-down",
+                            previous: 'fa fa-chevron-left',
+                            next: 'fa fa-chevron-right',
+                            today: 'fa fa-screenshot',
+                            clear: 'fa fa-trash',
+                            close: 'fa fa-remove'
+                        },
+                        format: 'L'
+                    });
 
-    <!--javascript for init-->
-    <script>
-        $('.datetimepicker').datetimepicker({
-            icons: {
-                time: "fa fa-clock-o",
-                date: "fa fa-calendar",
-                up: "fa fa-chevron-up",
-                down: "fa fa-chevron-down",
-                previous: 'fa fa-chevron-left',
-                next: 'fa fa-chevron-right',
-                today: 'fa fa-screenshot',
-                clear: 'fa fa-trash',
-                close: 'fa fa-remove'
-            },
-            format: 'L'
-        });
-
-    </script>
-}
+                </script>
+            }
