--- a/MyPartyCore/Views/Account/ProfileSettings.cshtml
+++ b/MyPartyCore/Views/Account/ProfileSettings.cshtml
@@ -12,7 +12,7 @@
 
         <div class="profile-content section">
             <div class="container">
-                <form asp-action="Profile" asp-controller="Account" method="post" enctype="multipart/form-data" class="settings-form">
+                <form asp-action="ProfileSettings" asp-controller="Account" method="post" enctype="multipart/form-data" class="settings-form">
 
                     <div class="row">
                         <div class="profile-picture">
